--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -108,14 +108,15 @@ p {text-align: center;}
   /* Add shadows to create the "card" effect */
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
-  height: 150px;
-  background-color: rgba(11, 77, 107, 0.404);
+  height: 330px;
+  background-color: rgba(212, 212, 212, 0.897);
   border: 1px solid black;
   float: left;
   margin: 1px;
   padding: 10px 3px;
   /*setting width for each and every card element as well as -10px for removing the margin width for 5 elements*/
   width: calc( 100% / 5 - 10px);
+  position: relative;
 }
 
 /* On mouse-over, add a deeper shadow */
@@ -128,7 +129,7 @@ p {text-align: center;}
   display: block;
   height: 100px;
   width: 50%;
- 
+
 }
 .Button_Show{
   text-align: left;
@@ -155,4 +156,39 @@ p {text-align: center;}
   height: 60px;
   padding-left: 70px;
   background-color: #cecece;
+}
+.button_Del {
+  border: none;
+  outline: 0;
+  display:inline-block;
+  padding: 8px;
+  color: white;
+  background-color: #000;
+  text-align: center;
+  cursor: pointer;
+  width: 100%;
+  height: 35px;
+  font-size: 18px;
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+}
+.button_Up {
+  border: none;
+  outline: 0;
+  display: inline-block;
+  padding: 8px;
+  color: white;
+  background-color: #000;
+  text-align: center;
+  cursor: pointer;
+  width: 100%;
+  height: 35px;
+  font-size: 18px;
+  position: absolute;
+  bottom: 36px;
+  left: 0px;
+}
+.button_Del:hover, .button_Up:hover {
+  opacity: 0.7;
 }
